# CMake script for the joltphysics library

cmake_minimum_required(VERSION 3.16)

function(main_project JOLT_TYPE)

if(JOLT_TYPE STREQUAL "AVX2")
	project(joltphysics_avx2)
elseif(JOLT_TYPE STREQUAL "SSE42")
	project(joltphysics_sse42)
else()
	project(joltphysics_sse2)
	set(JOLT_TYPE "SSE2")
endif()

set(SRCDIR "${CMAKE_CURRENT_SOURCE_DIR}/../..")
set(CMAKE_MODULE_PATH "${SRCDIR}/cmake")

include(joltphysics_settings.cmake)

include(source_lib_base)

target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)


## Source Files ##

target_sources(${PROJECT_NAME}
	PRIVATE
		"src/Jolt/AABBTree/AABBTreeBuilder.cpp"
		"src/Jolt/AABBTree/AABBTreeBuilder.h"
		"src/Jolt/AABBTree/AABBTreeToBuffer.h"
		"src/Jolt/AABBTree/NodeCodec/NodeCodecQuadTreeHalfFloat.h"
		"src/Jolt/AABBTree/TriangleCodec/TriangleCodecIndexed8BitPackSOA4Flags.h"
		"src/Jolt/Core/Atomics.h"
		"src/Jolt/Core/ByteBuffer.h"
		"src/Jolt/Core/Color.cpp"
		"src/Jolt/Core/Color.h"
		"src/Jolt/Core/Core.h"
		"src/Jolt/Core/Factory.cpp"
		"src/Jolt/Core/Factory.h"
		"src/Jolt/Core/FixedSizeFreeList.h"
		"src/Jolt/Core/FixedSizeFreeList.inl"
		"src/Jolt/Core/FPControlWord.h"
		"src/Jolt/Core/FPException.h"
		"src/Jolt/Core/FPFlushDenormals.h"
		"src/Jolt/Core/HashCombine.h"
		"src/Jolt/Core/IssueReporting.cpp"
		"src/Jolt/Core/IssueReporting.h"
		"src/Jolt/Core/JobSystem.h"
		"src/Jolt/Core/JobSystem.inl"
		"src/Jolt/Core/JobSystemThreadPool.cpp"
		"src/Jolt/Core/JobSystemThreadPool.h"
		"src/Jolt/Core/LinearCurve.cpp"
		"src/Jolt/Core/LinearCurve.h"
		"src/Jolt/Core/LockFreeHashMap.h"
		"src/Jolt/Core/LockFreeHashMap.inl"
		"src/Jolt/Core/Memory.cpp"
		"src/Jolt/Core/Memory.h"
		"src/Jolt/Core/Mutex.h"
		"src/Jolt/Core/MutexArray.h"
		"src/Jolt/Core/NonCopyable.h"
		"src/Jolt/Core/Profiler.cpp"
		"src/Jolt/Core/Profiler.h"
		"src/Jolt/Core/Profiler.inl"
		"src/Jolt/Core/Reference.h"
		"src/Jolt/Core/Result.h"
		"src/Jolt/Core/RTTI.cpp"
		"src/Jolt/Core/RTTI.h"
		"src/Jolt/Core/StaticArray.h"
		"src/Jolt/Core/StreamIn.h"
		"src/Jolt/Core/StreamOut.h"
		"src/Jolt/Core/StreamWrapper.h"
		"src/Jolt/Core/StringTools.cpp"
		"src/Jolt/Core/StringTools.h"
		"src/Jolt/Core/TempAllocator.h"
		"src/Jolt/Core/TickCounter.cpp"
		"src/Jolt/Core/TickCounter.h"
		"src/Jolt/Geometry/AABox.h"
		"src/Jolt/Geometry/AABox4.h"
		"src/Jolt/Geometry/ClipPoly.h"
		"src/Jolt/Geometry/ClosestPoint.h"
		"src/Jolt/Geometry/ConvexHullBuilder.cpp"
		"src/Jolt/Geometry/ConvexHullBuilder.h"
		"src/Jolt/Geometry/ConvexHullBuilder2D.cpp"
		"src/Jolt/Geometry/ConvexHullBuilder2D.h"
		"src/Jolt/Geometry/ConvexSupport.h"
		"src/Jolt/Geometry/Ellipse.h"
		"src/Jolt/Geometry/EPAConvexHullBuilder.h"
		"src/Jolt/Geometry/EPAPenetrationDepth.h"
		"src/Jolt/Geometry/GJKClosestPoint.h"
		"src/Jolt/Geometry/IndexedTriangle.h"
		"src/Jolt/Geometry/Indexify.cpp"
		"src/Jolt/Geometry/Indexify.h"
		"src/Jolt/Geometry/MortonCode.h"
		"src/Jolt/Geometry/OrientedBox.cpp"
		"src/Jolt/Geometry/OrientedBox.h"
		"src/Jolt/Geometry/Plane.h"
		"src/Jolt/Geometry/RayAABox.h"
		"src/Jolt/Geometry/RayAABox8.h"
		"src/Jolt/Geometry/RayCapsule.h"
		"src/Jolt/Geometry/RayCylinder.h"
		"src/Jolt/Geometry/RaySphere.h"
		"src/Jolt/Geometry/RayTriangle.h"
		"src/Jolt/Geometry/RayTriangle8.h"
		"src/Jolt/Geometry/Sphere.h"
		"src/Jolt/Geometry/Triangle.h"
		"src/Jolt/Jolt.h"
		"src/Jolt/Math/DVec3.h"
		"src/Jolt/Math/DVec3.inl"
		"src/Jolt/Math/EigenValueSymmetric.h"
		"src/Jolt/Math/FindRoot.h"
		"src/Jolt/Math/Float2.h"
		"src/Jolt/Math/Float3.h"
		"src/Jolt/Math/Float4.h"
		"src/Jolt/Math/GaussianElimination.h"
		"src/Jolt/Math/HalfFloat.h"
		"src/Jolt/Math/Mat44.h"
		"src/Jolt/Math/Mat44.inl"
		"src/Jolt/Math/Math.h"
		"src/Jolt/Math/MathTypes.h"
		"src/Jolt/Math/Matrix.h"
		"src/Jolt/Math/Quat.h"
		"src/Jolt/Math/Quat.inl"
		"src/Jolt/Math/Swizzle.h"
		"src/Jolt/Math/UVec4.cpp"
		"src/Jolt/Math/UVec4.h"
		"src/Jolt/Math/UVec4.inl"
		"src/Jolt/Math/UVec8.h"
		"src/Jolt/Math/UVec8.inl"
		"src/Jolt/Math/Vec3.cpp"
		"src/Jolt/Math/Vec3.h"
		"src/Jolt/Math/Vec3.inl"
		"src/Jolt/Math/Vec4.h"
		"src/Jolt/Math/Vec4.inl"
		"src/Jolt/Math/Vec8.h"
		"src/Jolt/Math/Vec8.inl"
		"src/Jolt/Math/Vector.h"
		"src/Jolt/ObjectStream/GetPrimitiveTypeOfType.h"
		"src/Jolt/ObjectStream/ObjectStream.cpp"
		"src/Jolt/ObjectStream/ObjectStream.h"
		"src/Jolt/ObjectStream/ObjectStreamBinaryIn.cpp"
		"src/Jolt/ObjectStream/ObjectStreamBinaryIn.h"
		"src/Jolt/ObjectStream/ObjectStreamBinaryOut.cpp"
		"src/Jolt/ObjectStream/ObjectStreamBinaryOut.h"
		"src/Jolt/ObjectStream/ObjectStreamIn.cpp"
		"src/Jolt/ObjectStream/ObjectStreamIn.h"
		"src/Jolt/ObjectStream/ObjectStreamOut.cpp"
		"src/Jolt/ObjectStream/ObjectStreamOut.h"
		"src/Jolt/ObjectStream/ObjectStreamTextIn.cpp"
		"src/Jolt/ObjectStream/ObjectStreamTextIn.h"
		"src/Jolt/ObjectStream/ObjectStreamTextOut.cpp"
		"src/Jolt/ObjectStream/ObjectStreamTextOut.h"
		"src/Jolt/ObjectStream/ObjectStreamTypes.h"
		"src/Jolt/ObjectStream/SerializableAttribute.h"
		"src/Jolt/ObjectStream/SerializableAttributeEnum.h"
		"src/Jolt/ObjectStream/SerializableAttributeTyped.h"
		"src/Jolt/ObjectStream/SerializableObject.cpp"
		"src/Jolt/ObjectStream/SerializableObject.h"
		"src/Jolt/ObjectStream/TypeDeclarations.cpp"
		"src/Jolt/ObjectStream/TypeDeclarations.h"
		"src/Jolt/Physics/Body/Body.cpp"
		"src/Jolt/Physics/Body/Body.h"
		"src/Jolt/Physics/Body/Body.inl"
		"src/Jolt/Physics/Body/BodyAccess.cpp"
		"src/Jolt/Physics/Body/BodyAccess.h"
		"src/Jolt/Physics/Body/BodyActivationListener.h"
		"src/Jolt/Physics/Body/BodyCreationSettings.cpp"
		"src/Jolt/Physics/Body/BodyCreationSettings.h"
		"src/Jolt/Physics/Body/BodyFilter.h"
		"src/Jolt/Physics/Body/BodyID.h"
		"src/Jolt/Physics/Body/BodyInterface.cpp"
		"src/Jolt/Physics/Body/BodyInterface.h"
		"src/Jolt/Physics/Body/BodyLock.h"
		"src/Jolt/Physics/Body/BodyLockInterface.h"
		"src/Jolt/Physics/Body/BodyLockMulti.h"
		"src/Jolt/Physics/Body/BodyManager.cpp"
		"src/Jolt/Physics/Body/BodyManager.h"
		"src/Jolt/Physics/Body/BodyPair.h"
		"src/Jolt/Physics/Body/MassProperties.cpp"
		"src/Jolt/Physics/Body/MassProperties.h"
		"src/Jolt/Physics/Body/MotionProperties.cpp"
		"src/Jolt/Physics/Body/MotionProperties.h"
		"src/Jolt/Physics/Body/MotionProperties.inl"
		"src/Jolt/Physics/Body/MotionQuality.h"
		"src/Jolt/Physics/Body/MotionType.h"
		"src/Jolt/Physics/Character/Character.cpp"
		"src/Jolt/Physics/Character/Character.h"
		"src/Jolt/Physics/Collision/AABoxCast.h"
		"src/Jolt/Physics/Collision/ActiveEdgeMode.h"
		"src/Jolt/Physics/Collision/ActiveEdges.h"
		"src/Jolt/Physics/Collision/BackFaceMode.h"
		"src/Jolt/Physics/Collision/BroadPhase/BroadPhase.cpp"
		"src/Jolt/Physics/Collision/BroadPhase/BroadPhase.h"
		"src/Jolt/Physics/Collision/BroadPhase/BroadPhaseBruteForce.cpp"
		"src/Jolt/Physics/Collision/BroadPhase/BroadPhaseBruteForce.h"
		"src/Jolt/Physics/Collision/BroadPhase/BroadPhaseLayer.h"
		"src/Jolt/Physics/Collision/BroadPhase/BroadPhaseQuadTree.cpp"
		"src/Jolt/Physics/Collision/BroadPhase/BroadPhaseQuadTree.h"
		"src/Jolt/Physics/Collision/BroadPhase/BroadPhaseQuery.h"
		"src/Jolt/Physics/Collision/BroadPhase/QuadTree.cpp"
		"src/Jolt/Physics/Collision/BroadPhase/QuadTree.h"
		"src/Jolt/Physics/Collision/CastConvexVsTriangles.cpp"
		"src/Jolt/Physics/Collision/CastConvexVsTriangles.h"
		"src/Jolt/Physics/Collision/CastSphereVsTriangles.cpp"
		"src/Jolt/Physics/Collision/CastSphereVsTriangles.h"
		"src/Jolt/Physics/Collision/CastResult.h"
		"src/Jolt/Physics/Collision/CollectFacesMode.h"
		"src/Jolt/Physics/Collision/CollideConvexVsTriangles.cpp"
		"src/Jolt/Physics/Collision/CollideConvexVsTriangles.h"
		"src/Jolt/Physics/Collision/CollidePointResult.h"
		"src/Jolt/Physics/Collision/CollideShape.h"
		"src/Jolt/Physics/Collision/CollideSphereVsTriangles.cpp"
		"src/Jolt/Physics/Collision/CollideSphereVsTriangles.h"
		"src/Jolt/Physics/Collision/CollisionCollector.h"
		"src/Jolt/Physics/Collision/CollisionCollectorImpl.h"
		"src/Jolt/Physics/Collision/CollisionDispatch.cpp"
		"src/Jolt/Physics/Collision/CollisionDispatch.h"
		"src/Jolt/Physics/Collision/CollisionGroup.cpp"
		"src/Jolt/Physics/Collision/CollisionGroup.h"
		"src/Jolt/Physics/Collision/ContactListener.h"
		"src/Jolt/Physics/Collision/GroupFilter.cpp"
		"src/Jolt/Physics/Collision/GroupFilter.h"
		"src/Jolt/Physics/Collision/GroupFilterTable.cpp"
		"src/Jolt/Physics/Collision/GroupFilterTable.h"
		"src/Jolt/Physics/Collision/ManifoldBetweenTwoFaces.cpp"
		"src/Jolt/Physics/Collision/ManifoldBetweenTwoFaces.h"
		"src/Jolt/Physics/Collision/NarrowPhaseQuery.cpp"
		"src/Jolt/Physics/Collision/NarrowPhaseQuery.h"
		"src/Jolt/Physics/Collision/NarrowPhaseStats.cpp"
		"src/Jolt/Physics/Collision/NarrowPhaseStats.h"
		"src/Jolt/Physics/Collision/ObjectLayer.h"
		"src/Jolt/Physics/Collision/PhysicsMaterial.cpp"
		"src/Jolt/Physics/Collision/PhysicsMaterial.h"
		"src/Jolt/Physics/Collision/PhysicsMaterialSimple.cpp"
		"src/Jolt/Physics/Collision/PhysicsMaterialSimple.h"
		"src/Jolt/Physics/Collision/RayCast.h"
		"src/Jolt/Physics/Collision/Shape/BoxShape.cpp"
		"src/Jolt/Physics/Collision/Shape/BoxShape.h"
		"src/Jolt/Physics/Collision/Shape/CapsuleShape.cpp"
		"src/Jolt/Physics/Collision/Shape/CapsuleShape.h"
		"src/Jolt/Physics/Collision/Shape/CompoundShape.cpp"
		"src/Jolt/Physics/Collision/Shape/CompoundShape.h"
		"src/Jolt/Physics/Collision/Shape/CompoundShapeVisitors.h"
		"src/Jolt/Physics/Collision/Shape/ConvexHullShape.cpp"
		"src/Jolt/Physics/Collision/Shape/ConvexHullShape.h"
		"src/Jolt/Physics/Collision/Shape/ConvexShape.cpp"
		"src/Jolt/Physics/Collision/Shape/ConvexShape.h"
		"src/Jolt/Physics/Collision/Shape/CylinderShape.cpp"
		"src/Jolt/Physics/Collision/Shape/CylinderShape.h"
		"src/Jolt/Physics/Collision/Shape/DecoratedShape.cpp"
		"src/Jolt/Physics/Collision/Shape/DecoratedShape.h"
		"src/Jolt/Physics/Collision/Shape/GetTrianglesContext.h"
		"src/Jolt/Physics/Collision/Shape/HeightFieldShape.cpp"
		"src/Jolt/Physics/Collision/Shape/HeightFieldShape.h"
		"src/Jolt/Physics/Collision/Shape/MeshShape.cpp"
		"src/Jolt/Physics/Collision/Shape/MeshShape.h"
		"src/Jolt/Physics/Collision/Shape/MutableCompoundShape.cpp"
		"src/Jolt/Physics/Collision/Shape/MutableCompoundShape.h"
		"src/Jolt/Physics/Collision/Shape/OffsetCenterOfMassShape.cpp"
		"src/Jolt/Physics/Collision/Shape/OffsetCenterOfMassShape.h"
		"src/Jolt/Physics/Collision/Shape/PolyhedronSubmergedVolumeCalculator.h"
		"src/Jolt/Physics/Collision/Shape/RotatedTranslatedShape.cpp"
		"src/Jolt/Physics/Collision/Shape/RotatedTranslatedShape.h"
		"src/Jolt/Physics/Collision/Shape/ScaledShape.cpp"
		"src/Jolt/Physics/Collision/Shape/ScaledShape.h"
		"src/Jolt/Physics/Collision/Shape/ScaleHelpers.h"
		"src/Jolt/Physics/Collision/Shape/Shape.cpp"
		"src/Jolt/Physics/Collision/Shape/Shape.h"
		"src/Jolt/Physics/Collision/Shape/SphereShape.cpp"
		"src/Jolt/Physics/Collision/Shape/SphereShape.h"
		"src/Jolt/Physics/Collision/Shape/StaticCompoundShape.cpp"
		"src/Jolt/Physics/Collision/Shape/StaticCompoundShape.h"
		"src/Jolt/Physics/Collision/Shape/SubShapeID.h"
		"src/Jolt/Physics/Collision/Shape/SubShapeIDPair.h"
		"src/Jolt/Physics/Collision/Shape/TaperedCapsuleShape.cpp"
		"src/Jolt/Physics/Collision/Shape/TaperedCapsuleShape.gliffy"
		"src/Jolt/Physics/Collision/Shape/TaperedCapsuleShape.h"
		"src/Jolt/Physics/Collision/Shape/TriangleShape.cpp"
		"src/Jolt/Physics/Collision/Shape/TriangleShape.h"
		"src/Jolt/Physics/Collision/ShapeCast.h"
		"src/Jolt/Physics/Collision/ShapeFilter.h"
		"src/Jolt/Physics/Collision/SortReverseAndStore.h"
		"src/Jolt/Physics/Collision/TransformedShape.cpp"
		"src/Jolt/Physics/Collision/TransformedShape.h"
		"src/Jolt/Physics/Constraints/ConeConstraint.cpp"
		"src/Jolt/Physics/Constraints/ConeConstraint.h"
		"src/Jolt/Physics/Constraints/Constraint.cpp"
		"src/Jolt/Physics/Constraints/Constraint.h"
		"src/Jolt/Physics/Constraints/ConstraintManager.cpp"
		"src/Jolt/Physics/Constraints/ConstraintManager.h"
		"src/Jolt/Physics/Constraints/ConstraintPart/AngleConstraintPart.h"
		"src/Jolt/Physics/Constraints/ConstraintPart/AxisConstraintPart.h"
		"src/Jolt/Physics/Constraints/ConstraintPart/DualAxisConstraintPart.h"
		"src/Jolt/Physics/Constraints/ConstraintPart/GearConstraintPart.h"
		"src/Jolt/Physics/Constraints/ConstraintPart/HingeRotationConstraintPart.h"
		"src/Jolt/Physics/Constraints/ConstraintPart/PointConstraintPart.h"
		"src/Jolt/Physics/Constraints/ConstraintPart/RackAndPinionConstraintPart.h"
		"src/Jolt/Physics/Constraints/ConstraintPart/RotationEulerConstraintPart.h"
		"src/Jolt/Physics/Constraints/ConstraintPart/RotationQuatConstraintPart.h"
		"src/Jolt/Physics/Constraints/ConstraintPart/SpringPart.h"
		"src/Jolt/Physics/Constraints/ConstraintPart/SwingTwistConstraintPart.h"
		"src/Jolt/Physics/Constraints/ContactConstraintManager.cpp"
		"src/Jolt/Physics/Constraints/ContactConstraintManager.h"
		"src/Jolt/Physics/Constraints/DistanceConstraint.cpp"
		"src/Jolt/Physics/Constraints/DistanceConstraint.h"
		"src/Jolt/Physics/Constraints/FixedConstraint.cpp"
		"src/Jolt/Physics/Constraints/FixedConstraint.h"
		"src/Jolt/Physics/Constraints/GearConstraint.cpp"
		"src/Jolt/Physics/Constraints/GearConstraint.h"
		"src/Jolt/Physics/Constraints/HingeConstraint.cpp"
		"src/Jolt/Physics/Constraints/HingeConstraint.h"
		"src/Jolt/Physics/Constraints/MotorSettings.cpp"
		"src/Jolt/Physics/Constraints/MotorSettings.h"
		"src/Jolt/Physics/Constraints/PathConstraint.cpp"
		"src/Jolt/Physics/Constraints/PathConstraint.h"
		"src/Jolt/Physics/Constraints/PathConstraintPath.cpp"
		"src/Jolt/Physics/Constraints/PathConstraintPath.h"
		"src/Jolt/Physics/Constraints/PathConstraintPathHermite.cpp"
		"src/Jolt/Physics/Constraints/PathConstraintPathHermite.h"
		"src/Jolt/Physics/Constraints/PointConstraint.cpp"
		"src/Jolt/Physics/Constraints/PointConstraint.h"
		"src/Jolt/Physics/Constraints/RackAndPinionConstraint.cpp"
		"src/Jolt/Physics/Constraints/RackAndPinionConstraint.h"
		"src/Jolt/Physics/Constraints/SixDOFConstraint.cpp"
		"src/Jolt/Physics/Constraints/SixDOFConstraint.h"
		"src/Jolt/Physics/Constraints/SliderConstraint.cpp"
		"src/Jolt/Physics/Constraints/SliderConstraint.h"
		"src/Jolt/Physics/Constraints/SwingTwistConstraint.cpp"
		"src/Jolt/Physics/Constraints/SwingTwistConstraint.h"
		"src/Jolt/Physics/Constraints/TwoBodyConstraint.cpp"
		"src/Jolt/Physics/Constraints/TwoBodyConstraint.h"
		"src/Jolt/Physics/EActivation.h"
		"src/Jolt/Physics/IslandBuilder.cpp"
		"src/Jolt/Physics/IslandBuilder.h"
		"src/Jolt/Physics/PhysicsLock.cpp"
		"src/Jolt/Physics/PhysicsLock.h"
		"src/Jolt/Physics/PhysicsScene.cpp"
		"src/Jolt/Physics/PhysicsScene.h"
		"src/Jolt/Physics/PhysicsSettings.h"
		"src/Jolt/Physics/PhysicsStepListener.h"
		"src/Jolt/Physics/PhysicsSystem.cpp"
		"src/Jolt/Physics/PhysicsSystem.h"
		"src/Jolt/Physics/PhysicsUpdateContext.cpp"
		"src/Jolt/Physics/PhysicsUpdateContext.h"
		"src/Jolt/Physics/Ragdoll/Ragdoll.cpp"
		"src/Jolt/Physics/Ragdoll/Ragdoll.h"
		"src/Jolt/Physics/StateRecorder.h"
		"src/Jolt/Physics/StateRecorderImpl.cpp"
		"src/Jolt/Physics/StateRecorderImpl.h"
		"src/Jolt/Physics/Vehicle/TrackedVehicleController.cpp"
		"src/Jolt/Physics/Vehicle/TrackedVehicleController.h"
		"src/Jolt/Physics/Vehicle/VehicleAntiRollBar.cpp"
		"src/Jolt/Physics/Vehicle/VehicleAntiRollBar.h"
		"src/Jolt/Physics/Vehicle/VehicleCollisionTester.cpp"
		"src/Jolt/Physics/Vehicle/VehicleCollisionTester.h"
		"src/Jolt/Physics/Vehicle/VehicleConstraint.cpp"
		"src/Jolt/Physics/Vehicle/VehicleConstraint.h"
		"src/Jolt/Physics/Vehicle/VehicleController.cpp"
		"src/Jolt/Physics/Vehicle/VehicleController.h"
		"src/Jolt/Physics/Vehicle/VehicleDifferential.cpp"
		"src/Jolt/Physics/Vehicle/VehicleDifferential.h"
		"src/Jolt/Physics/Vehicle/VehicleEngine.cpp"
		"src/Jolt/Physics/Vehicle/VehicleEngine.h"
		"src/Jolt/Physics/Vehicle/VehicleTrack.cpp"
		"src/Jolt/Physics/Vehicle/VehicleTrack.h"
		"src/Jolt/Physics/Vehicle/VehicleTransmission.cpp"
		"src/Jolt/Physics/Vehicle/VehicleTransmission.h"
		"src/Jolt/Physics/Vehicle/Wheel.cpp"
		"src/Jolt/Physics/Vehicle/Wheel.h"
		"src/Jolt/Physics/Vehicle/WheeledVehicleController.cpp"
		"src/Jolt/Physics/Vehicle/WheeledVehicleController.h"
		"src/Jolt/RegisterTypes.cpp"
		"src/Jolt/RegisterTypes.h"
		"src/Jolt/Renderer/DebugRenderer.cpp"
		"src/Jolt/Renderer/DebugRenderer.h"
		"src/Jolt/Renderer/DebugRendererPlayback.cpp"
		"src/Jolt/Renderer/DebugRendererPlayback.h"
		"src/Jolt/Renderer/DebugRendererRecorder.cpp"
		"src/Jolt/Renderer/DebugRendererRecorder.h"
		"src/Jolt/Skeleton/SkeletalAnimation.cpp"
		"src/Jolt/Skeleton/SkeletalAnimation.h"
		"src/Jolt/Skeleton/Skeleton.cpp"
		"src/Jolt/Skeleton/Skeleton.h"
		"src/Jolt/Skeleton/SkeletonPose.cpp"
		"src/Jolt/Skeleton/SkeletonPose.h"
		"src/Jolt/TriangleGrouper/TriangleGrouper.h"
		"src/Jolt/TriangleGrouper/TriangleGrouperClosestCentroid.cpp"
		"src/Jolt/TriangleGrouper/TriangleGrouperClosestCentroid.h"
		"src/Jolt/TriangleGrouper/TriangleGrouperMorton.cpp"
		"src/Jolt/TriangleGrouper/TriangleGrouperMorton.h"
		"src/Jolt/TriangleSplitter/TriangleSplitter.cpp"
		"src/Jolt/TriangleSplitter/TriangleSplitter.h"
		"src/Jolt/TriangleSplitter/TriangleSplitterBinning.cpp"
		"src/Jolt/TriangleSplitter/TriangleSplitterBinning.h"
		"src/Jolt/TriangleSplitter/TriangleSplitterFixedLeafSize.cpp"
		"src/Jolt/TriangleSplitter/TriangleSplitterFixedLeafSize.h"
		"src/Jolt/TriangleSplitter/TriangleSplitterLongestAxis.cpp"
		"src/Jolt/TriangleSplitter/TriangleSplitterLongestAxis.h"
		"src/Jolt/TriangleSplitter/TriangleSplitterMean.cpp"
		"src/Jolt/TriangleSplitter/TriangleSplitterMean.h"
		"src/Jolt/TriangleSplitter/TriangleSplitterMorton.cpp"
		"src/Jolt/TriangleSplitter/TriangleSplitterMorton.h")


## Link Libraries ##

# System libs must be linked last!
target_link_libraries(${PROJECT_NAME} ${SYSTEM_LIBS})

endfunction()

main_project("AVX2")
main_project("SSE42")
main_project("SSE2")
